--- a/Contact.html
+++ b/Contact.html
@@ -86,7 +86,7 @@
       </label>
       </div>
       
-        <button>Submit</button>
+        <button class="submit">Submit</button>
 
     </form>
       <div class="fb">
