--- a/Product.html
+++ b/Product.html
@@ -60,7 +60,7 @@
           <p class="Size">M</p>
           <p class="Size">L</p>
         <div>
-          <i class="far fa-heart">Add to wishlist</i>
+          <button class="heart"><i class="far fa-heart">Add to wishlist</i></button>
         </div>
         <div class="cta-cart">
           <a href="checkout.html" class="cta-cart" >ADD TO CART</a>
@@ -68,4 +68,5 @@
         </section>
        
       </main>
+      <script src="js/heart.js"></script>
       </body>
