--- a/ShopWoman.html
+++ b/ShopWoman.html
@@ -45,98 +45,99 @@
                 <h2>Comfort Zone Jacket Red</h2>
                 <img src="Images/JacketFemale.jpg" alt="Comfort Zone Jacket Red" />
                 <p>$99,99</p>
-                <i class="far fa-heart"></i>
-                <i class="fas fa-shopping-bag" class="Shopping"></i>
+                <button class="heart"><i class="far fa-heart"></i></button>
+                <button><i class="fas fa-shopping-bag" class="Shopping"></i></button>
                 <a href="Product.html" class="View">view</a>
             </div>
             <div class="jacket">
                 <h2>Comfort Zone Jacket Red</h2>
                 <img src="Images/JacketFemale.jpg" alt="Comfort Zone Jacket Red" />
                 <p>$99,99</p>
-                <i class="far fa-heart"></i>
-                <i class="fas fa-shopping-bag"></i>
+                <button class="heart"><i class="far fa-heart"></i></button>
+                <button><i class="fas fa-shopping-bag" class="Shopping"></i></button>
                 <a href="Product.html" class="View">view</a>
             </div>
             <div class="jacket">
                 <h2>Comfort Zone Jacket Red</h2>
                 <img src="Images/JacketFemale.jpg" alt="Comfort Zone Jacket Red" />
                 <p>$99,99</p>
-                <i class="far fa-heart"></i>
-                <i class="fas fa-shopping-bag"></i>
+                <button class="heart"><i class="far fa-heart"></i></button>
+                <button><i class="fas fa-shopping-bag" class="Shopping"></i></button>
                 <a href="Product.html" class="View">view</a>
             </div>
             <div class="jacket">
                 <h2>Comfort Zone Jacket Red</h2>
                 <img src="Images/JacketFemale.jpg" alt="Comfort Zone Jacket Red" />
                 <p>$99,99</p>
-                <i class="far fa-heart"></i>
-                <i class="fas fa-shopping-bag"></i>
+                <button class="heart"><i class="far fa-heart"></i></button>
+                <button><i class="fas fa-shopping-bag" class="Shopping"></i></button>
                 <a href="Product.html" class="View">view</a>
             </div>
             <div class="jacket">
                 <h2>Comfort Zone Jacket Red</h2>
                 <img src="Images/JacketFemale.jpg" alt="Comfort Zone Jacket Red" />
                 <p>$99,99</p>
-                <i class="far fa-heart"></i>
-                <i class="fas fa-shopping-bag"></i>
+                <button class="heart"><i class="far fa-heart"></i></button>
+                <button><i class="fas fa-shopping-bag" class="Shopping"></i></button>
                 <a href="Product.html" class="View">view</a>
             </div>
             <div class="jacket">
                 <h2>Comfort Zone Jacket Red</h2>
                 <img src="Images/JacketFemale.jpg" alt="Comfort Zone Jacket Red" />
                 <p>$99,99</p>
-                <i class="far fa-heart"></i>
-                <i class="fas fa-shopping-bag"></i>
+                <button class="heart"><i class="far fa-heart"></i></button>
+                <button><i class="fas fa-shopping-bag" class="Shopping"></i></button>
                 <a href="Product.html" class="View">view</a>
             </div>
             <div class="jacket">
                 <h2>Comfort Zone Jacket Red</h2>
                 <img src="Images/JacketFemale.jpg" alt="Comfort Zone Jacket Red" />
                 <p>$99,99</p>
-                <i class="far fa-heart"></i>
-                <i class="fas fa-shopping-bag"></i>
+                <button class="heart"><i class="far fa-heart"></i></button>
+                <button><i class="fas fa-shopping-bag" class="Shopping"></i></button>
                 <a href="Product.html" class="View">view</a>
             </div>
             <div class="jacket">
                 <h2>Comfort Zone Jacket Red</h2>
                 <img src="Images/JacketFemale.jpg" alt="Comfort Zone Jacket Red" />
                 <p>$99,99</p>
-                <i class="far fa-heart"></i>
-                <i class="fas fa-shopping-bag"></i>
+                <button class="heart"><i class="far fa-heart"></i></button>
+                <button><i class="fas fa-shopping-bag" class="Shopping"></i></button>
                 <a href="Product.html" class="View">view</a>
             </div>
             <div class="jacket">
                 <h2>Comfort Zone Jacket Red</h2>
                 <img src="Images/JacketFemale.jpg" alt="Comfort Zone Jacket Red" />
                 <p>$99,99</p>
-                <i class="far fa-heart"></i>
-                <i class="fas fa-shopping-bag"></i>
+                <button class="heart"><i class="far fa-heart"></i></button>
+                <button><i class="fas fa-shopping-bag" class="Shopping"></i></button>
                 <a href="Product.html" class="View">view</a>
             </div>
             <div class="jacket">
                 <h2>Comfort Zone Jacket Red</h2>
                 <img src="Images/JacketFemale.jpg" alt="Comfort Zone Jacket Red" />
                 <p>$99,99</p>
-                <i class="far fa-heart"></i>
-                <i class="fas fa-shopping-bag"></i>
+                <button class="heart"><i class="far fa-heart"></i></button>
+                <button><i class="fas fa-shopping-bag" class="Shopping"></i></button>
                 <a href="Product.html" class="View">view</a>
             </div>
             <div class="jacket">
                 <h2>Comfort Zone Jacket Red</h2>
                 <img src="Images/JacketFemale.jpg" alt="Comfort Zone Jacket Red" />
                 <p>$99,99</p>
-                <i class="far fa-heart"></i>
-                <i class="fas fa-shopping-bag"></i>
+                <button class="heart"><i class="far fa-heart"></i></button>
+                <button><i class="fas fa-shopping-bag" class="Shopping"></i></button>
                 <a href="Product.html" class="View">view</a>
             </div>
             <div class="jacket">
                 <h2>Comfort Zone Jacket Red</h2>
                 <img src="Images/JacketFemale.jpg" alt="Comfort Zone Jacket Red" />
                 <p>$99,99</p>
-                <i class="far fa-heart"></i>
-                <i class="fas fa-shopping-bag"></i>
+                <button class="heart"><i class="far fa-heart"></i></button>
+                <button><i class="fas fa-shopping-bag" class="Shopping"></i></button>
                 <a href="Product.html" class="View">view</a>
             </div>
           </section>
       </main>
+      <script src="js/heart.js"></script>
       </body>
