--- a/checkout.html
+++ b/checkout.html
@@ -81,7 +81,7 @@
             <i class="fab fa-cc-visa"></i>
           </div>
           <div>
-            <a href="orderComplete.html" class="checkout">Proceed to checkout</a>
+            <a href="proceed.html" class="checkout">Proceed to checkout</a>
           </div>
         </section>
       </main>
