--- a/checkout.html
+++ b/checkout.html
@@ -47,7 +47,15 @@
             <h3>Comfort Zone Jacket Red</h3>
             <i class="fas fa-trash-alt"></i>
             <p>Color: Red</p>
-            <p>Size: S</p>
+            <div class="selectSize">
+              <label for="size">Select size:</label>
+              <select id="size" name="size">
+                <option value="xs">XS</option>
+                <option value="s">S</option>
+                <option value="m">M</option>
+                <option value="l">L</option>
+              </select>
+            </div>
             <p>$99,99</p>
           </div>
           <div class="img2">
@@ -57,7 +65,15 @@
             <h3>Comfort Zone Jacket Red</h3>
             <i class="fas fa-trash-alt"></i>
             <p class="float">Color: Red</p>
-            <p class="float">Size: S</p>
+            <div class="selectSize">
+              <label for="size">Select size:</label>
+              <select id="size" name="size">
+                <option value="xs">XS</option>
+                <option value="s">S</option>
+                <option value="m">M</option>
+                <option value="l">L</option>
+              </select>
+            </div>
             <p class="float">$99,99</p>
           </div>
         </section>
