--- a/cart.html
+++ b/cart.html
@@ -51,7 +51,7 @@
               </div>
               <div class="counter">
                 <div class="btn">+</div>
-                <div class="count">2</div>
+                <div class="count"></div>
                 <div class="btn">-</div>
             </div>
             <div class="prices">
