--- a/ShopMan.html
+++ b/ShopMan.html
@@ -21,7 +21,7 @@
   </head> 
   <body>
       <header class="header">
-        <img src="images/Rainydays_Logo.png" alt="The Rainydays Logo" class="Logo"/>
+        <img src="images/Rainydays_Logo.png" alt="The Rainydays Logo, mountain and text" class="Logo"/>
         <nav>
           <ul>
               <li><a href="index.html" class="active">Home</a></li>
