--- a/checkout.html
+++ b/checkout.html
@@ -20,7 +20,7 @@
   </head> 
   <body>
       <header class="header">
-        <img src="images/Rainydays_Logo.png" alt="The Rainydays Logo" class="Logo"/>
+        <img src="images/Rainydays_Logo.png" alt="The Rainydays Logo, mountain" class="Logo"/>
         <nav>
           <ul>
               <li><a href="index.html" class="active">Home</a></li>
@@ -41,7 +41,7 @@
       <main class="co">
         <section>
           <div class="img1">
-            <img src="Images/Prod1.jpg" alt="Product in shopping bag"class="img1" />
+            <img src="Images/Prod1.jpg" alt="Product in shopping bag, rain jacket in red"class="img1" />
           </div>
           <div class="product1"></div>
             <h3>Comfort Zone Jacket Red</h3>
@@ -59,7 +59,7 @@
             <p>$99,99</p>
           </div>
           <div class="img2">
-            <img src="Images/Prod1.jpg" alt="Product in shopping bag" class="img2" />
+            <img src="Images/Prod1.jpg" alt="Product in shopping bag, rain jacket in red" class="img2" />
           </div>
           <div class="product2">
             <h3>Comfort Zone Jacket Red</h3>
