--- a/proceed.html
+++ b/proceed.html
@@ -4,7 +4,7 @@
     <script src="https://kit.fontawesome.com/f009722376.js" crossorigin="anonymous"></script>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home Page</title>
+    <title>Preceed</title>
     <link href="css/Styles.css" rel="stylesheet" />
     <!-- Hotjar Tracking Code for https://brave-bhabha-65999c.netlify.app/ -->
   <script>
