--- a/Product.html
+++ b/Product.html
@@ -42,20 +42,11 @@
       </header>
       <main class="product-details">
         <section>
-          <h1>Comfort Zone Jacket Red</h1>
-          <img src="Images/Prod1.jpg" alt="Comfort Zone Jacket Red" class="details" />
-          <div class="Prod234">
-            <img src="Images/Prod2.jpg" alt="Jacket details" class="details" />
-            <img src="Images/Prod3.jpg" alt="Jacket details" class="details" />
-            <img src="Images/Prod4.jpg" alt="Jacket details" class="details" />
-          </div>
+          <h1>Product Specific</h1>
+          <div class="product-container"></div>
+        
         </section>
-        <section class="info">
-          <p class="prod-info">Material </p>
-          <p class="prod-info">Product Info</p>
-          <p class="prod-info">Size guide</p>
-          <p class="choose">Color:</p>
-          <p class="choose">Choose Size</p>
+        <section>
           <div class="selectSize">
             <label for="size">Select size:</label>
             <select id="size" name="size">
@@ -64,14 +55,12 @@
               <option value="m">M</option>
               <option value="l">L</option>
             </select>
-          </div>
-        <div>
-          <button class="heart"><i class="far fa-heart">Add to wishlist</i></button>
-        </div>
-        <div class="cta-cart">
+          
+        </section>
+        <div class="cta-cart, p-btn">
           <a class="cta-cart" >ADD TO CART</a>
         </div>
-        </section>
       </main>
+      <script src="js/details.js"></script>
       <script src="js/heart.js"></script>
       </body>
