--- a/ShopMan.html
+++ b/ShopMan.html
@@ -40,104 +40,13 @@
         </nav>
       </header>
       <main>
-          <section class="JacketMale">
-              <div class="jacket">
-                <h2>Comfort Zone Jacket Red</h2>
-                <img src="Images/JacketMale.jpg" alt="Comfort Zone Jacket Red" />
-                <p>$99,99</p>
-                <button class="heart"><i class="far fa-heart"></i></button>
-                <button><i class="fas fa-shopping-bag" class="Shopping"></i></button>
-                <a href="Product.html" class="View">view</a>
-            </div>
-            <div class="jacket">
-                <h2>Comfort Zone Jacket Red</h2>
-                <img src="Images/JacketMale.jpg" alt="Comfort Zone Jacket Red" />
-                <p>$99,99</p>
-                <button class="heart"><i class="far fa-heart"></i></button>
-                <button><i class="fas fa-shopping-bag" class="Shopping"></i></button>
-                <a href="Product.html" class="View">view</a>
-            </div>
-            <div class="jacket">
-                <h2>Comfort Zone Jacket Red</h2>
-                <img src="Images/JacketMale.jpg" alt="Comfort Zone Jacket Red" />
-                <p>$99,99</p>
-                <button class="heart"><i class="far fa-heart"></i></button>
-                <button><i class="fas fa-shopping-bag" class="Shopping"></i></button>
-                <a href="Product.html" class="View">view</a>
-            </div>
-            <div class="jacket">
-                <h2>Comfort Zone Jacket Red</h2>
-                <img src="Images/JacketMale.jpg" alt="Comfort Zone Jacket Red" />
-                <p>$99,99</p>
-                <button class="heart"><i class="far fa-heart"></i></button>
-                <button><i class="fas fa-shopping-bag" class="Shopping"></i></button>
-                <a href="Product.html" class="View">view</a>
-            </div>
-            <div class="jacket">
-                <h2>Comfort Zone Jacket Red</h2>
-                <img src="Images/JacketMale.jpg" alt="Comfort Zone Jacket Red" />
-                <p>$99,99</p>
-                <button class="heart"><i class="far fa-heart"></i></button>
-                <button><i class="fas fa-shopping-bag" class="Shopping"></i></button>
-                <a href="Product.html" class="View">view</a>
-            </div>
-            <div class="jacket">
-                <h2>Comfort Zone Jacket Red</h2>
-                <img src="Images/JacketMale.jpg" alt="Comfort Zone Jacket Red" />
-                <p>$99,99</p>
-                <button class="heart"><i class="far fa-heart"></i></button>
-                <button><i class="fas fa-shopping-bag" class="Shopping"></i></button>
-                <a href="Product.html" class="View">view</a>
-            </div>
-            <div class="jacket">
-                <h2>Comfort Zone Jacket Red</h2>
-                <img src="Images/JacketMale.jpg" alt="Comfort Zone Jacket Red" />
-                <p>$99,99</p>
-                <button class="heart"><i class="far fa-heart"></i></button>
-                <button><i class="fas fa-shopping-bag" class="Shopping"></i></button>
-                <a href="Product.html" class="View">view</a>
-            </div>
-            <div class="jacket">
-                <h2>Comfort Zone Jacket Red</h2>
-                <img src="Images/JacketMale.jpg" alt="Comfort Zone Jacket Red" />
-                <p>$99,99</p>
-                <button class="heart"><i class="far fa-heart"></i></button>
-                <button><i class="fas fa-shopping-bag" class="Shopping"></i></button>
-                <a href="Product.html" class="View">view</a>
-            </div>
-            <div class="jacket">
-                <h2>Comfort Zone Jacket Red</h2>
-                <img src="Images/JacketMale.jpg" alt="Comfort Zone Jacket Red" />
-                <p>$99,99</p>
-                <button class="heart"><i class="far fa-heart"></i></button>
-                <button><i class="fas fa-shopping-bag" class="Shopping"></i></button>
-                <a href="Product.html" class="View">view</a>
-            </div>
-            <div class="jacket">
-                <h2>Comfort Zone Jacket Red</h2>
-                <img src="Images/JacketMale.jpg" alt="Comfort Zone Jacket Red" />
-                <p>$99,99</p>
-                <button class="heart"><i class="far fa-heart"></i></button>
-                <button><i class="fas fa-shopping-bag" class="Shopping"></i></button>
-                <a href="Product.html" class="View">view</a>
-            </div>
-            <div class="jacket">
-                <h2>Comfort Zone Jacket Red</h2>
-                <img src="Images/JacketMale.jpg" alt="Comfort Zone Jacket Red" />
-                <p>$99,99</p>
-                <button class="heart"><i class="far fa-heart"></i></button>
-                <button><i class="fas fa-shopping-bag" class="Shopping"></i></button>
-                <a href="Product.html" class="View">view</a>
-            </div>
-            <div class="jacket">
-                <h2>Comfort Zone Jacket Red</h2>
-                <img src="Images/JacketMale.jpg" alt="Comfort Zone Jacket Red" />
-                <p>$99,99</p>
-                <button class="heart"><i class="far fa-heart"></i></button>
-                <button><i class="fas fa-shopping-bag" class="Shopping"></i></button>
-                <a href="Product.html" class="View">view</a>
-            </div>
-          </section>
+        <section>
+            <h1>Shop Women</h1>
+            <div class="w-container"></div>
+            
+
+        </section>
       </main>
+      <script src="js/shop.js"></script>
       <script src="js/heart.js"></script>
       </body>
